[package]
name = "lens-rs"
version = "0.1.30"
authors = ["Xyzt Toe <584605539@qq.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "readme.md"
categories = [ "rust-patterns" ]
keywords = [ "pattern", "traversing", "lens"]
repository = "https://github.com/TOETOE55/lens-rs"
description = "lens implemented in rust"

[build-dependencies]
inwelling = "0.3"

[dependencies]
lens-rs_derive = "0.1"
