[package]
name = "lens-rs"
version = "0.3.0"
authors = ["Xyzt Toe <584605539@qq.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "readme.md"
categories = [ "rust-patterns" ]
keywords = [ "pattern", "traversing", "lens"]
repository = "https://github.com/TOETOE55/lens-rs"
description = "lens implemented in rust"

[dependencies]
lens-rs_derive = { path = "../lens-rs_derive", version = "0.3" }
lens-rs_generator = { path = "../lens-rs_generator", version = "0.1" }