[package]
name = "lens-rs_derive"
version = "0.0.5"
authors = ["Xyzt Toe <584605539@qq.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "readme.md"
categories = [ "rust-patterns" ]
keywords = [ "pattern", "tarevsesing", "lens"]
repository = "https://github.com/TOETOE55/lens-rs/lens-rs_derive"
description = "macro to derive lens for data type"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.24"
syn = "1.0.64"
quote = "1.0.9"