[package]
name = "lens-rs_derive"
version = "0.1.20"
authors = ["Xyzt Toe <584605539@qq.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "readme.md"
categories = [ "rust-patterns" ]
keywords = [ "pattern", "traversing", "lens"]
repository = "https://github.com/TOETOE55/lens-rs"
description = "macro to derive lens for data type"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["extra-traits","full","visit", "printing"] }
lazy_static = "1.4.0"