[package]
name = "lens-rs_test"
version = "0.1.0"
authors = ["Xyzt Toe <584605539@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lens-rs = { path = "../lens-rs" }
structx = { version = "0.1", optional = true }


[package.metadata.inwelling]
lens-rs_generator = true
structx = true

[features]
test_structx = [ "structx", "structx/lens-rs", "lens-rs/structx" ]